--- a/ShopMeWebParent/ShopMeBackend/src/main/resources/templates/users.html
+++ b/ShopMeWebParent/ShopMeBackend/src/main/resources/templates/users.html
@@ -60,7 +60,7 @@
         </nav>
     </div>
     <div>
-        <h1>ShopMe Control Panel</h1>
+        <h1>Manage Users</h1>
     </div>
 
     <div>
