--- a/ShopMeWebParent/ShopMeBackend/src/main/resources/templates/user_form.html
+++ b/ShopMeWebParent/ShopMeBackend/src/main/resources/templates/user_form.html
@@ -4,7 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0, minimum-scale=1.0">
 
-    <title>Create New User</title>
+    <title>[[${pageTitle}]]</title>
 
     <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"/>
     <script type="text/javascript" th:src="@{/webjars/jquery/jquery.min.js}"></script>
@@ -60,10 +60,11 @@
         </nav>
     </div>
     <div>
-        <h2>Manage Users | Create New User</h2>
+        <h2>Manage Users | [[${pageTitle}]]</h2>
     </div>
     <form th:action="@{/users/save}" method="post" style="max-width:700px; margin: 0 auto"
           th:object="${user}" onsubmit="return checkEmailUnique(this);">
+        <input type="hidden" th:field="*{id}">
         <div class="border border-secondary rounded p-3">
             <div class="form-group row">
                 <label class="col-sm-4 col-form-label">E-mail:</label>
@@ -89,7 +90,11 @@
             <div class="form-group row">
                 <label class="col-sm-4 col-form-label">Password:</label>
                 <div class="col-sm-8">
-                    <input type="password" class="form-control" th:field="*{password}" required minlength="8"
+                    <input th:if="${user.id == null} " type="password" class="form-control" th:field="*{password}"
+                           required minlength="8"
+                           maxlength="20"/>
+                    <input th:if="${user.id != null} " type="password" class="form-control" th:field="*{password}"
+                           minlength="8"
                            maxlength="20"/>
                 </div>
             </div>
@@ -108,6 +113,15 @@
                 <label class="col-sm-4 col-form-label">Enabled:</label>
                 <div class="col-sm-8">
                     <input type="checkbox" th:field="*{enabled}"/>
+                </div>
+            </div>
+            <div class="form-group row">
+                <label class="col-sm-4 col-form-label">Photo:</label>
+                <div class="col-sm-8 img">
+                    <input type="file" id="fileImage" accept="image/png image/jpeg"
+                           class="mb-2"/>
+                    <img id="thumbnail" alt="Photos Preview" th:src="@{/images/default-user.png}"
+                         class="img-fluid"/>
                 </div>
             </div>
             <div class="text-center">
@@ -145,13 +159,27 @@
       $("#buttonCancel").on("click", function(){
           window.location = "[[@{/users}]]";
       });
+
+      $("#fileImage").change(function(){
+       showImageThumbnail(this);
+      });
     });
 
+     function showImageThumbnail(fileInput){
+       var file = fileInput.files[0];
+       var reader = new FileReader();
+       reader.onload = function (e){
+        $("#thumbnail").attr("src", e.target.result);
+       };
+
+       reader.readAsDataURL(file);
+     };
     function checkEmailUnique(form){
     		url = "[[@{/users/check_email}]]";
 			userEmail = $("#email").val();
+			userId = $("#id").val();
 			csrfValue = $("input[name='_csrf']").val();
-			params = { email: userEmail, _csrf: csrfValue};
+			params = {id: userId, email: userEmail, _csrf: csrfValue};
 
           $.post(url,params, function(response){
           if(response == "OK")
@@ -171,16 +199,6 @@
               $("#modalDialog").modal();
     }
     }
-
-
-
-
-
-
-
-
-
-
 
 
 </script>
