--- a/ShopMeWebParent/ShopMeBackend/src/main/resources/templates/users.html
+++ b/ShopMeWebParent/ShopMeBackend/src/main/resources/templates/users.html
@@ -63,7 +63,10 @@
     </div>
     <div>
         <h2>Manage Users</h2>
-        <a th:href="@{/users/new}">Create New User</a>
+        <a th:href="@{/users/new}" class="fas fa-user-plus fa-2x icon-blue mr-2"></a>
+        <a th:href="@{/users/export/csv}" class="fas fa-file-csv fa-2x icon-blue mr-2"></a>
+        <a th:href="@{/users/export/excel}" class="fas fa-file-excel fa-2x icon-blue mr-2"></a>
+        <a th:href="@{/users/export/pdf}" class="fas fa-file-pdf fa-2x icon-blue mr-2"></a>
     </div>
 
     <div th:if="${message != null}" class="alert alert-success text-center">
@@ -77,35 +80,42 @@
             Filter:&nbsp;
             <input type="search" name="keyword" th:value="${keyword}" class="form-control" required/>
             &nbsp;&nbsp;
-            <input type="submit" value="Search" class="btn btn-primary"/>
+            <button type="submit" class="btn btn-primary">
+                <i class="fas fa-search"></i>
+            </button>
             &nbsp;&nbsp;
-            <input type="button" value="Clear" class="btn btn-secondary" onclick="clearFilter()"/>
+            <button type="button" class="btn btn-secondary" onclick="clearFilter()">
+                <i class="fas fa-eraser"></i>
+            </button>
         </form>
     </div>
 
-    <div>
+    <div class="Full-details">
         <table class="table table-bordered table-striped table-hover table-responsive-xl">
-            <thead class="table-dark">
+            <thead class="thead-dark">
             <tr>
-                <th th:replace="fragments :: column_link('id', 'User Id')"></th>
+                <th class="hideable-column">
+                <th th:replace="fragments :: column_link('id', 'User Id', 'tag')"></th>
                 <th>Photos</th>
-                <th th:replace="fragments :: column_link('email', 'E-mail')"></th>
-                <th th:replace="fragments :: column_link('firstName', 'First Name')"></th>
-                <th th:replace="fragments :: column_link('lastName', 'Last Name')"></th>
+                <th class="hideable-column">
+                <th th:replace="fragments :: column_link('email', 'E-mail', 'tag')"></th>
+                </th>
+                <th th:replace="fragments :: column_link('firstName', 'First Name', 'none')"></th>
+                <th th:replace="fragments :: column_link('lastName', 'Last Name', 'none')"></th>
                 <th>Roles</th>
-                <th th:replace="fragments :: column_link('enabled', 'Enabled')"></th>
+                <th th:replace="fragments :: column_link('enabled', 'Enabled', 'none')"></th>
                 <th></th>
             </tr>
             </thead>
             <tbody>
             <tr th:each="user : ${listUsers}">
-                <td>[[${user.id}]]</td>
+                <td class="hideable-column">[[${user.id}]]</td>
                 <td>
                     <span th:if="${user.photos == null}" class="fas fa-portrait fa-3x icon-silver"></span>
                     <img th:if="${user.photos != null}" th:src="@{${user.photosImagePath}}"
                          style="width: 100px">
                 </td>
-                <td>[[${user.email}]]</td>
+                <td class="hideable-column">[[${user.email}]]</td>
                 <td>[[${user.firstName}]]</td>
                 <td>[[${user.lastName}]]</td>
                 <td>[[${user.roles}]]</td>
@@ -127,6 +137,34 @@
         </table>
     </div>
 
+    <div class="Less-details">
+        <div th:each="user : ${listUsers}" class="row m-1">
+            <div class="col-4">
+                <span th:if="${user.photos == null}" class="fas fa-portrait fa-3x icon-silver"></span>
+                <img th:if="${user.photos != null}" th:src="@{${user.photosImagePath}}"
+                     style="width: 100px">
+            </div>
+            <div class="col-8">
+                <div>[[${user.fullName}]]</div>
+                <div>[[${user.roles}]]</div>
+                <div class="mt-2">
+                    <a th:if="${user.enabled == true}" class="fas fa-check-circle fa-2x icon-green"
+                       th:href="@{'/users/' + ${user.id} + '/enabled/false'}" title="Disable this User"></a>
+                    <a th:if="${user.enabled == false}" class="fas fa-circle fa-2x icon-dark"
+                       th:href="@{'/users/' + ${user.id} + '/enabled/true'}" title="Enable this User"></a>
+                    &nbsp;
+                    <a class="fas fa-edit fa-2x icon-green" th:href="@{'/users/edit/' + ${user.id}}"
+                       title="Edit This User"></a>
+                    &nbsp;&nbsp;
+                    <a class="fas fa-trash fa-2x icon-dark link-delete" th:href="@{'/users/delete/' + ${user.id}}"
+                       th:userId="${user.id}"></a>
+                </div>
+            </div>
+
+            <div>&nbsp;</div>
+        </div>
+    </div>
+
     <div class="text-center m-1" th:if="${totalItems > 0}">
         <span>Showing Users # [[${startCount}]] to [[${endCount}]] of [[${totalItems}]]</span>
     </div>
@@ -134,9 +172,9 @@
         <span>No Users Found</span>
     </div>
 
-    <div th:if="${totalItems > 0}">
+    <div th:if="${totalPages > 1}">
         <nav>
-            <ul class="pagination justify-content-center">
+            <ul class="pagination justify-content-center flex-wrap">
                 <li th:class="${currentPage > 1 ? 'page-item' : 'page-item disabled'}">
                     <a th:replace="fragments :: page_link(1, 'First' )"></a>
                 </li>
@@ -197,6 +235,7 @@
      function clearFilter(){
          window.location = "[[@{/users}]]" ;
      }
+
 
 
 
