--- a/ShopMeWebParent/ShopMeBackend/src/main/resources/templates/fragments.html
+++ b/ShopMeWebParent/ShopMeBackend/src/main/resources/templates/fragments.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://thymleaf.org">
-<head>
+<head th:fragment="page_head(pageTitle)">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0, minimum-scale=1.0">
 
-    <title>Home - ShopMe Admin</title>
+    <title>[[${pageTitle}]]</title>
 
     <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"/>
     <link rel="stylesheet" type="text/css" th:href="@{/fontawesome/all.css}"/>
     <link rel="stylesheet" type="text/css" th:href="@{/style.css}"/>
     <script type="text/javascript" th:src="@{/webjars/jquery/jquery.min.js}"></script>
     <script type="text/javascript" th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
+    <script type="text/javascript" th:src="@{/js/common.js}"></script>
 </head>
 <body>
 <th th:fragment="column_link(fieldName,columnLabel, removeTag)" th:remove="${removeTag}">
@@ -27,5 +28,8 @@
     ? '&keyword='+ keyword : ''}}"
 >[[${label}]]
 </a>
+<div th:fragment="footer" class="text-center m-3">
+    <p>ShopMe Control Panel - Copyright &copy; ShopMe </p>
+</div>
 </body>
 </html>
