--- a/ShopMeWebParent/ShopMeBackend/src/main/resources/templates/login.html
+++ b/ShopMeWebParent/ShopMeBackend/src/main/resources/templates/login.html
@@ -1,34 +1,41 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://thymleaf.org">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0, minimum-scale=1.0">
-
     <title>Login - ShopMe Admin</title>
-
     <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"/>
-
 </head>
+
 <body>
 <div class="container-fluid text-center">
-      <div>
 
-      </div>
     <div>
-        <img th:src="@{/images/ShopmeAdminBig.png}">
+        <img th:src="@{/images/ShopmeAdminBig.png}" class="img-fluid"/>
     </div>
 
-    <form th:action="@{/login}" method="post" style="max-width:350px; margin: 0 auto;">
+    <form th:action="@{/login}" method="post"
+          style="max-width: 350px; margin: 0 auto">
+        <div th:if="${param.error}">
+            <p class="text-danger">[[${session.SPRING_SECURITY_LAST_EXCEPTION.message}]]</p>
+        </div>
+        <div th:if="${param.logout}">
+            <p class="text-warning">You have been logged out.</p>
+        </div>
+
         <div class="border border-secondary rounded p-3">
             <p>Access to Shopme Control Panel</p>
             <p>
-                <input type="email" name="email" placeholder="E-mail" class="form-control" required>
+                <input type="email" name="email" placeholder="E-mail" class="form-control" required/>
             </p>
             <p>
-                <input type="password" name="password" placeholder="Password" class="form-control" required>
+                <input type="password" name="password" placeholder="Password" class="form-control" required/>
             </p>
             <p>
-                <input type="submit" value="Login" class="btn btn-primary">
+                <input type="checkbox" name="remember-me"/>&nbsp;Remember Me
+            </p>
+            <p>
+                <input type="submit" value="Login" class="btn btn-primary"/>
             </p>
         </div>
     </form>
