--- a/ShopMeWebParent/ShopMeBackend/src/main/resources/templates/users.html
+++ b/ShopMeWebParent/ShopMeBackend/src/main/resources/templates/users.html
@@ -1,65 +1,10 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://thymleaf.org">
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0, minimum-scale=1.0">
-
-    <title>Home - ShopMe Admin</title>
-
-    <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"/>
-    <link rel="stylesheet" type="text/css" th:href="@{/fontawesome/all.css}"/>
-    <link rel="stylesheet" type="text/css" th:href="@{/style.css}"/>
-    <script type="text/javascript" th:src="@{/webjars/jquery/jquery.min.js}"></script>
-    <script type="text/javascript" th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
-</head>
+<head th:replace="~{fragments :: page_head('Users - ShopMe Admin')}"></head>
 <body>
 <div class="container-fluid">
     <div>
-        <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
-            <a class="navbar-brand" th:href="@{/}">
-                <img th:src="@{/images/ShopmeAdminSmall.png}"/>
-            </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#topNavbar">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="topNavbar">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" th:href="@{/users}">Users</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" th:href="@{/categories}">Categories</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" th:href="@{/brands}">Brands</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" th:href="@{/products}">Products</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" th:href="@{/customers}">Customers</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" th:href="@{/shipping}">Shipping</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" th:href="@{/orders}">Orders</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" th:href="@{/report}">Sales Report</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" th:href="@{/articles}">Articles</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" th:href="@{/menus}">Menus</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" th:href="@{/settings}">Settings</a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
+        <div th:replace="~{navigation :: menu}"></div>
     </div>
     <div>
         <h2>Manage Users</h2>
@@ -95,15 +40,15 @@
             <thead class="thead-dark">
             <tr>
                 <th class="hideable-column">
-                <th th:replace="fragments :: column_link('id', 'User Id', 'tag')"></th>
+                <th th:replace="~{fragments :: column_link('id', 'User Id', 'tag')}"></th>
                 <th>Photos</th>
                 <th class="hideable-column">
-                <th th:replace="fragments :: column_link('email', 'E-mail', 'tag')"></th>
+                <th th:replace="~{fragments :: column_link('email', 'E-mail', 'tag')}"></th>
                 </th>
-                <th th:replace="fragments :: column_link('firstName', 'First Name', 'none')"></th>
-                <th th:replace="fragments :: column_link('lastName', 'Last Name', 'none')"></th>
+                <th th:replace="~{fragments :: column_link('firstName', 'First Name', 'none')}"></th>
+                <th th:replace="~{fragments :: column_link('lastName', 'Last Name', 'none')}"></th>
                 <th>Roles</th>
-                <th th:replace="fragments :: column_link('enabled', 'Enabled', 'none')"></th>
+                <th th:replace="~{fragments :: column_link('enabled', 'Enabled', 'none')}"></th>
                 <th></th>
             </tr>
             </thead>
@@ -176,22 +121,22 @@
         <nav>
             <ul class="pagination justify-content-center flex-wrap">
                 <li th:class="${currentPage > 1 ? 'page-item' : 'page-item disabled'}">
-                    <a th:replace="fragments :: page_link(1, 'First' )"></a>
+                    <a th:replace="~{fragments :: page_link(1, 'First' )}"></a>
                 </li>
                 <li th:class="${currentPage > 1 ? 'page-item' : 'page-item disabled'}">
-                    <a th:replace="fragments :: page_link(${currentPage - 1}, 'Previous' )"></a>
+                    <a th:replace="~{fragments :: page_link(${currentPage - 1}, 'Previous' )}"></a>
                 </li>
 
                 <li th:class="${currentPage != i ? 'page-item' : 'page-item active'}"
                     th:each=" i : ${#numbers.sequence(1, totalPages)}">
-                    <a th:replace="fragments :: page_link(${i}, ${i} )"></a>
+                    <a th:replace="~{fragments :: page_link(${i}, ${i} )}"></a>
                 </li>
 
                 <li th:class="${currentPage < totalPages ? 'page-item' : 'page-item disabled'}">
-                    <a th:replace="fragments :: page_link(${currentPage + 1}, 'Next' )"></a>
+                    <a th:replace="~{fragments :: page_link(${currentPage + 1}, 'Next' )}"></a>
                 </li>
                 <li th:class="${currentPage < totalPages ? 'page-item' : 'page-item disabled'}">
-                    <a th:replace="fragments :: page_link(${totalPages}, 'Last' )"></a>
+                    <a th:replace="~{fragments :: page_link(${totalPages}, 'Last' )}"></a>
                 </li>
             </ul>
         </nav>
@@ -216,9 +161,7 @@
         </div>
     </div>
 
-    <div class="text-center">
-        <p>ShopMe Control Panel - Copyright &copy; ShopMe </p>
-    </div>
+    <div th:replace="~{fragments :: footer}"></div>
 </div>
 <script type="text/javascript">
       $(document).ready(function(){
@@ -235,10 +178,6 @@
      function clearFilter(){
          window.location = "[[@{/users}]]" ;
      }
-
-
-
-
 </script>
 </body>
 </html>
