--- a/ShopMeWebParent/ShopMeBackend/src/main/resources/templates/users/user_form.html
+++ b/ShopMeWebParent/ShopMeBackend/src/main/resources/templates/users/user_form.html
@@ -1,30 +1,24 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="~{fragments :: page_head('Your Account Details')}"></head>
+<head th:replace="~{fragments :: page_head('${pageTitle}')}"></head>
 <body>
 <div class="container-fluid">
     <div>
         <div th:replace="~{navigation :: menu}"></div>
     </div>
-
-    <form th:action="@{/account/update}" method="post" style="max-width:700px; margin: 0 auto"
+    <div>
+        <h2>Manage Users | [[${pageTitle}]]</h2>
+    </div>
+    <form th:action="@{/users/save}" method="post" style="max-width:700px; margin: 0 auto"
           enctype="multipart/form-data"
-          th:object="${user}">
+          th:object="${user}" onsubmit="return checkEmailUnique(this);">
         <input type="hidden" th:field="*{id}">
-
-        <div class="text-center">
-            <h2>Your Account Details</h2>
-        </div>
-
-        <div th:if="${message != null}" class="alert alert-success text-center">
-            [[${message}]]
-        </div>
-
         <div class="border border-secondary rounded p-3">
             <div class="form-group row">
                 <label class="col-sm-4 col-form-label">E-mail:</label>
                 <div class="col-sm-8">
-                    <input type="email" class="form-control" th:field="*{email}" readonly="readonly"/>
+                    <input type="email" class="form-control" th:field="*{email}" required minlength="8"
+                           maxlength="128"/>
                 </div>
             </div>
             <div class="form-group row">
@@ -44,26 +38,30 @@
             <div class="form-group row">
                 <label class="col-sm-4 col-form-label">Password:</label>
                 <div class="col-sm-8">
-                    <input type="password" th:field="*{password}" class="form-control"
-                           placeholder="leave blank if you don't want to change the password"
-                           minlength="8" maxlength="20"
-                           oninput="checkPasswordMatch(document.getElementById('confirmPassword'))">
+                    <input th:if="${user.id == null} " type="password" class="form-control" th:field="*{password}"
+                           required minlength="8" maxlength="20"/>
+                    <input th:if="${user.id != null} " type="password" class="form-control" th:field="*{password}"
+                           minlength="8"
+                           maxlength="20"/>
                 </div>
             </div>
             <div class="form-group row">
-                <label class="col-sm-4 col-form-label">Confirm Password:</label>
+                <label class="col-sm-4 col-form-label">Roles:</label>
                 <div class="col-sm-8">
-                    <input type="password" id="confirmPassword" class="form-control"
-                           minlength="8" maxlength="20" oninput="checkPasswordMatch(this)">
+                    <th:block th:each="role : ${listRoles}">
+                        <input type="checkbox" th:field="*{roles}" th:text="${role.name}"
+                               th:value="${role.id}" class="m-2"/>
+                        - <small>[[${role.description}]]</small>
+                        <br/>
+                    </th:block>
                 </div>
             </div>
             <div class="form-group row">
-                <label class="col-sm-4 col-form-label">Assigned Roles:</label>
+                <label class="col-sm-4 col-form-label">Enabled:</label>
                 <div class="col-sm-8">
-                    <span><b>[[${user.roles}]]</b></span>
+                    <input type="checkbox" th:field="*{enabled}"/>
                 </div>
             </div>
-
             <div class="form-group row">
                 <label class="col-sm-4 col-form-label">Photo:</label>
                 <div class="col-sm-8 img">
@@ -103,47 +101,34 @@
     <div th:replace="~{fragments :: footer}"></div>
 </div>
 <script type="text/javascript">
-    $(document).ready(function (){
-      $("#buttonCancel").on("click", function(){
-          window.location = "[[@{/users}]]";
-      });
+moduleURL = "[[@{/users}]]";
+function checkEmailUnique(form){
+    	url = "[[@{/users/check_email}]]";
+		userEmail = $("#email").val();
+		userId = $("#id").val();
+		csrfValue = $("input[name='_csrf']").val();
+		params = {id: userId, email: userEmail, _csrf: csrfValue};
 
-      $("#fileImage").change(function(){
-       fileSize = this.files[0].size;
+        $.post(url,params, function(response){
+        if(response == "OK")
+        { form.submit();}
+          else if (response == "Duplicate"){
+            showModalDialog("Warning", "There is another user with email " + userEmail);    }
+          else { showModalDialog("Error", "Unknown response from server" );}
+        }).fail( function(){
+        showModalDialog("Error", "Could not connect to the server" );
+        });
 
-       if(fileSize > 1048576)
-       {
-       this.setCustomValidity("You must choose an image less than 1 MB !");
-       this.reportValidity();
-       }
-       else{
-       this.setCustomValidity("");
-       showImageThumbnail(this);
-       }
-      });
-    });
+        return false;
 
-     function showImageThumbnail(fileInput){
-       var file = fileInput.files[0];
-       var reader = new FileReader();
-       reader.onload = function (e){
-        $("#thumbnail").attr("src", e.target.result);
-       };
-
-       reader.readAsDataURL(file);
-     };
-
-     function checkPasswordMatch(confirmPassword){
-
-       if(confirmPassword.value != $("#password").val()){
-       confirmPassword.setCustomValidity("Password do not match!");
-       }
-       else{
-       confirmPassword.setCustomValidity("");
-       }
-     }
-
+function showModalDialog(title, message){
+         $("#modalTitle").text(title);
+         $("#modalBody").text(message);
+         $("#modalDialog").modal();
+}
+}
 
 </script>
+<script th:src="@{/js/common_form.js}"></script>
 </body>
 </html>
