--- a/ShopMeWebParent/ShopMeBackend/src/main/resources/templates/categories/category_form.html
+++ b/ShopMeWebParent/ShopMeBackend/src/main/resources/templates/categories/category_form.html
@@ -49,7 +49,8 @@
                 <label class="col-sm-4 col-form-label">Image:</label>
                 <div class="col-sm-8">
                     <input type="hidden" th:field="*{image}"/>
-                    <input type="file" id="fileImage" name="fileImage" class="mb-2"/>
+                    <input type="file" id="fileImage" name="fileImage" accept="image/png image/jpeg" required
+                           class="mb-2"/>
 
                     <div class="mt-2">
                         <img id="thumbnail" alt="Image preview"
@@ -82,6 +83,7 @@
 </div>
 <script type="text/javascript">
 moduleURL = "[[@{/categories}]]";
+
 
 
 
