--- a/ShopMeWebParent/ShopMeBackend/src/main/resources/templates/users/user_form.html
+++ b/ShopMeWebParent/ShopMeBackend/src/main/resources/templates/users/user_form.html
@@ -79,25 +79,7 @@
         </div>
     </form>
 
-    <div class="modal fade text-center"
-         id="modalDialog">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h4 class="modal-title" id="modalTitle">Warning</h4>
-                    <button type="button" class="close" data-dismiss="modal">&times;</button>
-                </div>
-
-                <div class="modal-body">
-                    <span id="modalBody"></span>
-                </div>
-
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
-                </div>
-            </div>
-        </div>
-    </div>
+    <div th:replace="~{modal_fragments :: modal_dialog}"></div>
     <div th:replace="~{fragments :: footer}"></div>
 </div>
 <script type="text/javascript">
@@ -113,19 +95,14 @@ function checkEmailUnique(form){
         if(response == "OK")
         { form.submit();}
           else if (response == "Duplicate"){
-            showModalDialog("Warning", "There is another user with email " + userEmail);    }
-          else { showModalDialog("Error", "Unknown response from server" );}
+            showWarningModal("There is another user with email " + userEmail);    }
+          else { showErrorModal("Unknown response from server" );}
         }).fail( function(){
-        showModalDialog("Error", "Could not connect to the server" );
+        showErrorModal("Could not connect to the server" );
         });
 
         return false;
 
-function showModalDialog(title, message){
-         $("#modalTitle").text(title);
-         $("#modalBody").text(message);
-         $("#modalDialog").modal();
-}
 }
 
 
